modified:   posts/mappy.json

--- a/posts/mappy.json
+++ b/posts/mappy.json
@@ -15,7 +15,7 @@
 
    ],
 
-   "text":"これはopenglのパフォーマンスデモンストレーションです。データはコンソールを出します。",
+   "text":"これは日本の昔のゲーム”マッピー”のクローンです。",
 
    "icons":
    [
